# First_repo

./: Tuple.cpp  VariadicTemplatesTmp.cpp  a.out  main.cpp  readme.md
GA/: GA.py  saves_208.rar  saves_362.rar
Tests/: CMakeLists.txt  Test_Game.h  main_test.cpp  testing.cpp
classes/: CMakeLists.txt  Test_Game.h  create  main  main.cpp  main_test.cpp  testing.cpp  tmp.txt
classes/Additional/: Stats.cpp  Stats.h
classes/BattleField/: Cell.cpp  Cell.h  Level.cpp  Level.h
classes/InGameObjects/: Archer.cpp  Archer.h  Army.cpp  Army.h  Building.cpp  Building.h  BuildingFactory.h  Castle.h  Cavalery.h  Custom_Unit.cpp  Custom_Unit.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  Player.cpp  Player.h  PlayerBuildings.cpp  PlayerBuildings.h  Squad.cpp  Squad.h  Swordsman.h  UserBuildings.h  Warrior.cpp  Warrior.h  WarriorFactory.cpp  WarriorFactory.h
classes/Input/: CMakeLists.txt  InputController.h  InputFactory.cpp  InputFactory.h  InputKeyboard.cpp  InputKeyboard.h  kbhit.cpp  kbhit.h
classes/Main/: Board.cpp  Board.h  Environment.cpp  Environment.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Shop.cpp  Shop.h
classes/Painter/: Painter.cpp  Painter.h  PainterConsole.cpp  PainterConsole.h  PainterFactory.cpp  PainterFactory.h  PainterGame.cpp  PainterGame.h  PainterMenu.cpp  PainterMenu.h  PainterShop.cpp  PainterShop.h
classes/Tests/: Test_Game
classes/tmp/: CMakeLists.txt  build_enter  build_kbhit  enter.cpp  kbhit  kbhit.cpp
